<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/colorNeutro"
    tools:context=".UI.App.Jugadores.JugadoresFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvTitleJugadores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Jugadores que supervisa"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListarJugadores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleJugadores"
            android:visibility="gone"
            tools:itemCount="2"
            tools:listitem="@layout/item_report_card" />

        <TextView
            android:id="@+id/tvJugadoresEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleJugadores"
            android:layout_centerInParent="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/nonplayer_registred"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvShowToken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvJugadoresEmpty"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:visibility="gone"
            android:textSize="24sp"
            tools:text="1122221121" />

        <TextView
            android:id="@+id/btnOkAndClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvShowToken"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_clipboard"
            android:layout_marginBottom="16dp"
            android:background="@color/white"
            android:visibility="gone"
            android:padding="16dp"
            android:text="@string/aceptar"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnOkAndClose"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_logout"
            android:background="@color/colorDark"
            android:visibility="gone"
            android:padding="16dp"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </RelativeLayout>
</FrameLayout>